--- a/app/src/main/res/layout/activity_insert_new_password.xml
+++ b/app/src/main/res/layout/activity_insert_new_password.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".reset_password">
+    tools:context=".insert_new_password">
+
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -20,17 +21,17 @@
 
 
         <Button
-            android:id="@+id/SendCode_button_activityResetpassword"
+            android:id="@+id/ResetPassword_button_activityInsertNewPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
             android:layout_gravity="center"
-            android:text="@string/btn_send_code"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:layout_marginTop="150dp"
             android:paddingStart="45dp"
+            android:paddingTop="10dp"
             android:paddingEnd="45dp"
-            android:textSize="20dp"/>
+            android:paddingBottom="10dp"
+            android:text="@string/btn_reset_password"
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -59,7 +60,7 @@
                 android:layout_width="123dp"
                 android:layout_height="135dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/user_light" />
+                android:src="@drawable/user_light"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -73,13 +74,29 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center"
-                android:hint="Ingresa tu número"
+                android:hint="Ingresa nueva contraseña"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
                 app:boxBackgroundMode="outline">
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputPhoneNumber_activityResetPassword"
+                    android:id="@+id/InputNewPassword_activityInsertNewPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:layout_gravity="center"
+                android:hint="Confirmar nueva contraseña"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp"
+                app:boxBackgroundMode="outline">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ConfirmNewPassword_activityInsertNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -88,5 +105,4 @@
 
         </FrameLayout>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
