registro e inicio de sesion v0.1

--- a/app/src/main/res/layout/activity_insert_new_password.xml
+++ b/app/src/main/res/layout/activity_insert_new_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".insert_new_password">
+    tools:context=".inser_new_password.insert_new_password">
 
 
     <FrameLayout
@@ -57,17 +57,21 @@
             android:layout_height="match_parent"
             android:background="@drawable/style_appdata">
             <ImageView
-                android:layout_width="123dp"
-                android:layout_height="135dp"
+                android:layout_width="@dimen/sizo_icon_user"
+                android:layout_height="@dimen/sizo_icon_user"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/user_light"/>
+                android:src="@drawable/icon_user3_dark" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="150dp"
-                android:text="Recuperar contraseña" />
+                android:layout_marginTop="140dp"
+                android:gravity="center"
+                android:fontFamily="sans-serif-medium"
+                android:text="Recuperar contraseña"
+                android:textSize="@dimen/text_title_size_sign_in" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -82,7 +86,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/InputNewPassword_activityInsertNewPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_input"
+                    android:inputType="textPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -94,11 +100,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
-                app:boxBackgroundMode="outline">
+                app:boxBackgroundMode="outline"
+                app:endIconMode="password_toggle">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ConfirmNewPassword_activityInsertNewPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_input"
+                    android:inputType="textPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
