--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -56,17 +56,20 @@
             android:layout_height="match_parent"
             android:background="@drawable/style_appdata">
             <ImageView
-                android:layout_width="123dp"
-                android:layout_height="135dp"
+                android:layout_width="@dimen/sizo_icon_user"
+                android:layout_height="@dimen/sizo_icon_user"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/user_light" />
+                android:src="@drawable/icon_user3_dark" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="150dp"
-                android:text="Recuperar contraseña" />
+                android:layout_marginTop="140dp"
+                android:gravity="center"
+                android:fontFamily="sans-serif-medium"
+                android:text="Recuperar contraseña"
+                android:textSize="@dimen/text_title_size_sign_in" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -81,7 +84,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/InputPhoneNumber_activityResetPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_input"
+                    android:inputType="phone"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
