--- a/app/src/main/res/layout/activity_data_register.xml
+++ b/app/src/main/res/layout/activity_data_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".data_register.data_register">
+    tools:context=".data_register.Controller_data_register">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
 
         <Button
-            android:id="@+id/SignIn_button_activitySign_in"
+            android:id="@+id/Register_button_activityData_register"
             style="@style/button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,20 +51,33 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:scrollbarSize="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:paddingHorizontal="15dp"
                     android:layout_gravity="center">
 
                     <ImageView
-                        android:layout_width="123dp"
-                        android:layout_height="135dp"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/user_light" />
+                        android:layout_marginTop="35dp"
+                        android:background="@drawable/icon_user3_dark" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="Registrarse"
+                        android:textSize="@dimen/text_title_size_sign_in" />
+
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -78,10 +91,10 @@
                         app:boxBackgroundMode="outline">
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/InputFirstName_activityData_register"
-                            style="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                            android:textSize="@dimen/text_size_input"
+                            />
                     </com.google.android.material.textfield.TextInputLayout>
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -96,7 +109,8 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/InputLastName_activityData_register"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -113,6 +127,7 @@
                             android:id="@+id/InputPhoneNumber_activityData_register"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"
                             android:inputType="phone"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -130,6 +145,7 @@
                             android:id="@+id/InputAge_activityData_register"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"
                             android:inputType="numberDecimal"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -147,6 +163,7 @@
                             android:id="@+id/InputPassword_activityData_register"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"
                             android:inputType="textPassword"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -165,6 +182,7 @@
                             android:id="@+id/InputConfirmPassword_activityData_register"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"
                             android:inputType="textPassword"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
