--- a/app/src/main/res/layout/activity_qa_map.xml
+++ b/app/src/main/res/layout/activity_qa_map.xml
@@ -8,29 +8,89 @@
     style="@style/BackGround_screen_menu"
     tools:context=".qa_map">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp"
+        style="@style/BackGround_toolbar"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="1dp">
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/style_toolbar"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButton"
+            <ImageButton
+                android:id="@+id/Menu_activityQaMap"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/menu" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/option_map" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/Map_activityQaMap"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/GroupButton_FloatingButton_activityQaMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:fab_addButtonColorNormal="@color/FloatingButton"
+        app:fab_addButtonColorPressed="@color/PressFloatingButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/Layer_FloatingButton_activityQaMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:layout_marginStart="5dp"
-            android:src="@drawable/menu" />
+            app:fab_colorNormal="@color/FloatingButton"
+            app:fab_colorPressed="@color/PressFloatingButton"
+            app:fab_icon="@drawable/icon_layers"
+            app:fab_size="mini" />
 
-        <TextView
-            android:id="@+id/textView5"
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/FindMyLocation_FloatingButton_activityQaMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
+            app:fab_colorNormal="@color/FloatingButton"
+            app:fab_colorPressed="@color/PressFloatingButton"
+            app:fab_icon="@drawable/icon_ubication"
+            app:fab_size="mini" />
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/ButtonEmergency_FloatingButton_activityQaMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/FloatingButton"
+            app:fab_colorPressed="@color/PressFloatingButton"
+            app:fab_icon="@drawable/icon_buttone"
+            app:fab_size="mini" />
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </androidx.constraintlayout.widget.ConstraintLayout>
