--- a/app/src/main/res/layout/activity_sign_in_user.xml
+++ b/app/src/main/res/layout/activity_sign_in_user.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".sign_in_user">
+    tools:context=".sign_in.Controller_sign_in_user">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -35,7 +35,7 @@
                     android:text="@string/btn_sign_in" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/LogIn_button_activitySign_in"
+                    android:id="@+id/Register_button_activitySign_in"
                     style="@style/button_style_without_background"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -62,18 +62,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/style_appdata">
+
                         <ImageView
-                            android:layout_width="123dp"
-                            android:layout_height="135dp"
+                            android:layout_width="@dimen/sizo_icon_user"
+                            android:layout_height="@dimen/sizo_icon_user"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/user_light" />
+                            android:src="@drawable/icon_user3_dark" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="150dp"
-                            android:text="Iniciar sesión" />
+                            android:layout_marginTop="140dp"
+                            android:gravity="center"
+                            android:fontFamily="sans-serif-medium"
+                            android:text="Iniciar sesión"
+                            android:textSize="@dimen/text_title_size_sign_in" />
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
@@ -89,6 +93,7 @@
                                     android:id="@+id/InputPhoneNumber_activitySign_in"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:textSize="@dimen/text_size_input"
                                     android:inputType="phone"/>
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -107,6 +112,7 @@
                                     android:id="@+id/InputPassword_activitySign_in"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:textSize="@dimen/text_size_input"
                                     android:inputType="textPassword"/>
                         </com.google.android.material.textfield.TextInputLayout>
 
